# word-translation-microservice

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: database.py  models.py  routes.py  schemas.py  services.py  utils.py
migrations/: env.py
migrations/versions/: 573dbf5c42bc_init.py
tests/: test_services.py
