[tool.poetry]
name = "challenge"
version = "0.1.0"
description = ""
authors = ["Flavio Henrique <flaviohenriqu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.6"
httpx = "^0.24.1"
pytest = "^7.3.1"
alembic = "^1.11.1"
aiohttp = "^3.8.4"
aiohttp-requests = "^0.1.3"
requests-html = "^0.10.0"
black = "^23.3.0"
isort = "^5.12.0"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
pytest-asyncio = "^0.21.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
